# time-series-pattern-recognition

./: .gitignore  CMakeLists.txt  README.md  agent.md  analysis.txt  llm.txt  test.txt  todo.md
exec/: AUBsanitizer.sh  Msanitizer.sh  debug_execution.sh  download_input.sh  profiling.sh  release_execution.sh
exec/script_download_input/: main.py  pyproject.toml
parallel/: CMakeLists.txt
parallel/include/: common.hpp  cuda_utils.cuh  data_loader.hpp  kernel.cuh  pattern_matching.cuh  query_generator.hpp  query_loader.hpp
parallel/src/: data_loader.cpp  kernel.cu  main.cpp  pattern_matching.cu  query_generator.cpp  query_loader.cpp
report/: main.tex
report/images/: figure
report/images/5-workflow/: new_workflow_sequence.md
report/images/6-analisi/: STPN_workflow.xpn
report/src/: 1-introduction.tex  2-sequential.tex  3-parallel.tex  4-analysis.tex  copertina.tex  preambolo.tex
sequential/: CMakeLists.txt
sequential/include/: DataLoader.hpp  Matcher.hpp  QueryGenerator.hpp  SAD_distance.hpp  common.hpp  data_loader.hpp  query_generator.hpp  query_loader.hpp
sequential/src/: DataLoader.cpp  Matcher.cpp  QueryGenerator.cpp  SAD_distance.cpp  data_loader.cpp  main.cpp  query_generator.cpp  query_loader.cpp
slides/: main.tex
slides/src/: 1-introduction.tex  2-sequential.tex  3-parallel.tex  4-analysis.tex  footpage.tex  preambolo.tex  titlepage.tex
